--- a/src/app/installer/create-wallet/create-wallet.component.html
+++ b/src/app/installer/create-wallet/create-wallet.component.html
@@ -325,7 +325,7 @@
             <p class="widget-help">
               <strong>Friendly reminder:</strong> Don't forget that the Recovery Phrase (and Password) are very important for keeping your funds safe. Anyone with access to them has access to your coins. If you think your Recovery Phrase (and Password) might have been exposed, it would be better to create a new wallet instead and send your coins there.
             </p>
-    
+
           </div>
         </div><!-- .page-intro -->
 
@@ -346,7 +346,7 @@
             If you set up a Recovery Password during wallet creation as well, enter it below:
           </p>
           <p class="widget-help">
-            If you created your wallet in Ghost Desktop v1.1, a bug prevented Recovery Password to be set. If that's your case, don't enter any password even if you set one up.
+            If you created your wallet in Falcon Desktop v1.1, a bug prevented Recovery Password to be set. If that's your case, don't enter any password even if you set one up.
           </p>
           <mat-form-field class="password-input larger">
             <input #passwordRestoreElem matInput placeholder="Enter your password" [type]="passwordRestoreElem.show ? 'text' : 'password'"
