--- a/src/app/wallet/help/help.component.html
+++ b/src/app/wallet/help/help.component.html
@@ -6,7 +6,7 @@
       <mat-card class="card">
         <div class="list section">
 
-          <a class="item" href="https://www.ghostbymcafee.com/faq/" target="_blank">
+          <a class="item" href="https://www.falconofficial.com/faq/" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-circle-question"></mat-icon>
             </div>
@@ -22,7 +22,7 @@
       <mat-card class="card">
         <div class="list section">
 
-        <!--<a class="item" href="https://ghostbymcafee.com/" target="_blank">
+        <!--<a class="item" href="https://falconofficial.com/" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-chat-discussion"></mat-icon>
             </div>
@@ -32,7 +32,7 @@
             </div>
           </a>
 
-          <a class="item" href="https://ghostbymcafee.com/" target="_blank">
+          <a class="item" href="https://falconofficial.com/" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-riot"></mat-icon>
             </div>
@@ -72,7 +72,7 @@
         <div class="grid section">
 
         <!--
-          <a class="item" href="https://ghostbymcafee.com/" target="_blank">
+          <a class="item" href="https://falconofficial.com/" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-medium"></mat-icon>
             </div>
@@ -82,7 +82,7 @@
           </a>
         -->
 
-          <a class="item" href="https://twitter.com/ghostbymcafee" target="_blank">
+          <a class="item" href="https://twitter.com/falconofficial" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-twitter"></mat-icon>
             </div>
@@ -99,7 +99,7 @@
             </div>
           </a>
 
-      <!--    <a class="item" href="https://ghostbymcafee.com/" target="_blank">
+      <!--    <a class="item" href="https://falconofficial.com/" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-facebook"></mat-icon>
             </div>
@@ -173,7 +173,7 @@
             </div>
           </a>
 
-          <a class="item" href="https://ghostbymcafee.com" target="_blank">
+          <a class="item" href="https://falconofficial.com" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-wikipedia"></mat-icon>
             </div>
@@ -190,7 +190,7 @@
       <mat-card class="card">
         <div class="list section">
 
-          <a class="item" href="https://www.ghostbymcafee.com/" target="_blank">
+          <a class="item" href="https://www.falconofficial.com/" target="_blank">
             <div class="icon">
                 <mat-icon fontSet="partIcon" fontIcon="part-swap"></mat-icon>
             </div>
