--- a/src/app/installer/terms/terms.component.html
+++ b/src/app/installer/terms/terms.component.html
@@ -27,7 +27,7 @@
         <h1>Ghost Wallet License Agreement</h1>
         <div class="content">
           <p>
-            In order to use Ghost Desktop please accept the following license agreement.
+            In order to use Falcon Desktop please accept the following license agreement.
           </p>
         </div>
       </div><!-- .page-intro -->
@@ -37,7 +37,7 @@
 
     <div class="action-buttons" fxLayoutAlign="space-between center">
       <div class="left">
-        <button mat-button color="warn" matTooltip="Ghost Desktop will be closed" (click)="decline()">
+        <button mat-button color="warn" matTooltip="Falcon Desktop will be closed" (click)="decline()">
           <mat-icon class="icon" fontSet="partIcon" fontIcon="part-cross"></mat-icon>
           Decline &amp; Close
         </button>
