--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,11 @@
 
 /*
 
-___  ____ ____ ___     ___  ____ ____ _  _ ___ ____ ___  
-|__] |__| |__/  |      |  \ |___ [__  |_/   |  |  | |__] 
-|    |  | |  \  |  .   |__/ |___ ___] | \_  |  |__| |    
-                                                         
-Main stylesheet for Ghost Desktop app
+___  ____ ____ ___     ___  ____ ____ _  _ ___ ____ ___
+|__] |__| |__/  |      |  \ |___ [__  |_/   |  |  | |__]
+|    |  | |  \  |  .   |__/ |___ ___] | \_  |  |__| |
+
+Main stylesheet for Falcon Desktop app
 What you can't find here will be probably in `/src/assets/scss/material-components.scss`
 
   TOC:
