More changes to rebrand

--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,6 +1,6 @@
 <div class="loading-wrapper">
 
-  <img class="logo" src="assets/ghost-logo.svg">
+  <img class="logo" src="assets/falcon-logo.svg">
 
   <div class="loader">
     <span>&bull;</span><span>&bull;</span><span>&bull;</span>
@@ -13,7 +13,7 @@
   <div *ngIf="blockReceived != blockHeader">
     <p>Syncing with the network, {{blockReceived}}/{{blockHeader}} block(s) received.</p>
   </div>
-  
+
   <blockquote class="quote">
     <p>A specter is haunting the modern world, the specter of crypto anarchy.</p>
     <footer class="author">&mdash; Tim May - The Crypto Anarchy Manifesto 1992.</footer>
