--- a/src/app/modals/market-listing-expiration/listing-expiration.component.html
+++ b/src/app/modals/market-listing-expiration/listing-expiration.component.html
@@ -23,7 +23,7 @@
       <span *ngIf="expiration && !txError">Approximate listing fee:
         <br>
       </span>
-      <span *ngIf="expiration && !txError">{{ txFee }} GHOST</span>
+      <span *ngIf="expiration && !txError">{{ txFee }} FNC</span>
       <span class="small" *ngIf="expiration && txError"> {{ txError }}</span>
     </div>
   </div>
