--- a/src/app/wallet/proposals/proposals.component.html
+++ b/src/app/wallet/proposals/proposals.component.html
@@ -31,10 +31,10 @@
     <div class="content">
       <p>
         As part of Ghost's decentralized governance mechanism, you can submit and vote on any Ghost-related proposal.<br>
-        Once a proposal is submitted, every GHOST holder can vote on it.
+        Once a proposal is submitted, every FNC holder can vote on it.
       </p>
       <p class="widget-help">
-        Anyone can submit and vote on proposals in a provably fair manner. The weight of your vote is equal to your GHOST balance.
+        Anyone can submit and vote on proposals in a provably fair manner. The weight of your vote is equal to your FNC balance.
       </p>
     </div>
   </div><!-- .page-intro -->
