--- a/src/assets/_color-palettes.scss
+++ b/src/assets/_color-palettes.scss
@@ -1,8 +1,8 @@
 /*
 
- __   __        __   __      __             ___ ___ ___  ___  __  
-/  ` /  \ |    /  \ |__)    |__)  /\  |    |__   |   |  |__  /__` 
-\__, \__/ |___ \__/ |  \    |    /~~\ |___ |___  |   |  |___ .__/ 
+ __   __        __   __      __             ___ ___ ___  ___  __
+/  ` /  \ |    /  \ |__)    |__)  /\  |    |__   |   |  |__  /__`
+\__, \__/ |___ \__/ |  \    |    /~~\ |___ |___  |   |  |___ .__/
 
 Definitions of color palettes for Material components
 
@@ -19,7 +19,7 @@ Definitions of color palettes for Material components
     1. Palette definitions
 \* ------------------------------- */
 
-// GHOST green
+// FNC green
 $part-green: (
   50: #e9faf2,
   100: #c7f2de,
@@ -45,7 +45,7 @@ $part-green: (
   )
 );
 
-// GHOST blue
+// FNC blue
 $part-blue: (
   50: #e3f3fb,
   100: #b9e0f5,
@@ -71,7 +71,7 @@ $part-blue: (
   )
 );
 
-// GHOST purple
+// FNC purple
 $part-purple: (
   50: #ebe9f4,
   100: #cdc8e5,
