--- a/src/app/installer/errors/error.component.html
+++ b/src/app/installer/errors/error.component.html
@@ -4,7 +4,7 @@
 
   <div class="sidebar">
     <div class="logo">
-      <img src="./assets/ghost-logo.svg" alt="Ghost">
+      <img src="./assets/falcon-logo.svg" alt="Ghost">
     </div>
 
     <mat-divider></mat-divider>
