--- a/src/app/market/sell/seller-listing/seller-listing.component.html
+++ b/src/app/market/sell/seller-listing/seller-listing.component.html
@@ -38,10 +38,10 @@
           <th>Price per item</th>
           <td>
             {{ listing?.basePrice.getIntegerPart() }}{{ listing?.basePrice.dot() }}<small>{{ listing?.basePrice.getFractionalPart() }}</small>
-            GHOST
+            FNC
           </td>
         </tr>
-        <!--tr><th>Total price</th><td>46.<small>257</small> GHOST</td></tr-->
+        <!--tr><th>Total price</th><td>46.<small>257</small> FNC</td></tr-->
       </table>
     </div>
   </div>
