--- a/src/app/modals/processing-modal/processing-modal.component.html
+++ b/src/app/modals/processing-modal/processing-modal.component.html
@@ -1,7 +1,7 @@
 <div class="loading-container">
   <div class="loading-info">
     <div class="loading-image">
-      <img src="./assets/ghost-logo.svg">
+      <img src="./assets/falcon-logo.svg">
     </div>
     <p class="title">
       {{data?.message}}
