--- a/src/app/modals/proposal-confirmation/proposal-confirmation.component.html
+++ b/src/app/modals/proposal-confirmation/proposal-confirmation.component.html
@@ -24,10 +24,10 @@
 
     <p class="fee-info">
       Transaction fee:
-      <span class="amount">{{data?.proposalTransactionFee?.getAmount()}} GHOST</span>
+      <span class="amount">{{data?.proposalTransactionFee?.getAmount()}} FNC</span>
       <span class="fiat">&asymp; 0.05 USD</span><br>
       Total amount:
-      <span class="amount">{{data?.proposalTransactionFee?.getAmount()}} GHOST</span>
+      <span class="amount">{{data?.proposalTransactionFee?.getAmount()}} FNC</span>
       <span class="fiat">&asymp; 3.47 USD</span>
     </p>
 
