--- a/src/app/wallet/help/help.component.html
+++ b/src/app/wallet/help/help.component.html
@@ -51,7 +51,7 @@
             </div>
           </a>
 
-          <a class="item" href="https://t.me/ghostcoinbymcafee" target="_blank">
+          <a class="item" href="https://t.me/falconcoinbymcafee" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-telegram"></mat-icon>
             </div>
@@ -119,7 +119,7 @@
             </div>
           </a>
 
-          <a class="item" href="https://mastodon.social/@ghost" target="_blank">
+          <a class="item" href="https://mastodon.social/@falcon" target="_blank">
             <div class="icon">
               <mat-icon fontSet="partIcon" fontIcon="part-mastodon"></mat-icon>
             </div>
@@ -153,7 +153,7 @@
       <mat-card class="card">
         <div class="list section">
 
-          <a class="item" href="https://github.com/ghost-coin" target="_blank">
+          <a class="item" href="https://github.com/falcon-coin" target="_blank">
             <div class="icon">
                 <mat-icon fontSet="partIcon" fontIcon="part-github"></mat-icon>
             </div>
@@ -163,7 +163,7 @@
             </div>
           </a>
 
-          <!--<a class="item" href="https://www.transifex.com/ghost/ghost-website/" target="_blank">
+          <!--<a class="item" href="https://www.transifex.com/falcon/falcon-website/" target="_blank">
             <div class="icon">
                 <mat-icon fontSet="partIcon" fontIcon="part-document"></mat-icon>
             </div>
@@ -186,7 +186,7 @@
         </div>
       </mat-card>
 
-      <div class="subtitle">Get GHOST <span class="tag">Buy/Sell</span></div>
+      <div class="subtitle">Get FNC <span class="tag">Buy/Sell</span></div>
       <mat-card class="card">
         <div class="list section">
 
