--- a/src/app/wallet/wallet/receive/receive.component.html
+++ b/src/app/wallet/wallet/receive/receive.component.html
@@ -34,7 +34,7 @@
         </button>
       </div>
       <div class="right" fxFlex="70%">
-        <a *ngIf="type === 'public'" mat-button matTooltip="Display address' public information on Block Explorer" href="https://{{testnet ? 'testnet.' : ''}}ghostscan.io/address/{{selected?.address}}" target="_blank">
+        <a *ngIf="type === 'public'" mat-button matTooltip="Display address' public information on Block Explorer" href="https://{{testnet ? 'testnet.' : ''}}falconscan.io/address/{{selected?.address}}" target="_blank">
           <mat-icon fontSet="partIcon" fontIcon="part-info"></mat-icon>
           Show on Explorer
         </a>
